--- a/config/application.yml
+++ b/config/application.yml
@@ -148,6 +148,7 @@ defaults: &defaults
     others: 1000
   error_codes:
     success: '000'
+    wrong_data: '100'
     not_found: '401'
     member_data_invalid: '405'
     prospect_data_invalid: '403'
@@ -175,6 +176,8 @@ defaults: &defaults
     no_amount: '9887'    
     member_already_set_wrong_address: '9888'
     member_set_wrong_address_error: '9889'
+    next_bill_date_prior_actual_date: 9994
+    next_bill_date_blank: 9995
     credit_card_blank_without_grace: '9997'
     billing_date_not_reached: '9999'
     member_email_blacklisted: '9996'
