--- a/config/application.yml
+++ b/config/application.yml
@@ -176,6 +176,8 @@ defaults: &defaults
     no_amount: '9887'    
     member_already_set_wrong_address: '9888'
     member_set_wrong_address_error: '9889'
+    could_not_get_member_list: 9992
+    could_not_change_next_bill_date: 9993
     next_bill_date_prior_actual_date: 9994
     next_bill_date_blank: 9995
     credit_card_blank_without_grace: '9997'
