--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 development:
   adapter: mysql2
   #database: sac_production_onmc_import
-  database: sac_platform_development
+  database: sac_platform_prototype
   host: localhost
   username: root
   encoding: utf8
