added migration and logic related to de ability to disable club_cash within a club

--- a/config/application.yml
+++ b/config/application.yml
@@ -160,6 +160,7 @@ defaults: &defaults
     club_is_not_enable_for_new_enrollments: '410'
     unrecoverable_error: '411'
     club_cash_cant_be_fixed: '412'
+    club_does_not_support_club_cash: '413'
     duplicate_transaction: '900'
     not_supported: '902'
     product_empty: '903'
