--- a/config/application.yml
+++ b/config/application.yml
@@ -1,6 +1,7 @@
 defaults: &defaults
   cc_encryption_key: reibel3y5estrada8
   max_reactivations: 3
+  days_to_wait_to_cancel_fulfillments: 2
   next_retry_on_missing_decline: 20.days
   number_of_retries_on_missing_decline: 4
   club_cash_for_members_who_belongs_to_group: 200
