--- a/config/application.yml
+++ b/config/application.yml
@@ -37,7 +37,8 @@ defaults: &defaults
     membership_billing_without_pgc: 109
     chargeback: 110
     error_on_enrollment_billing: 111
-    event_billing: 112
+    no_recurrent_billing: 112
+    no_recurrent_billing_with_error: 113
     #profile
     cancel: 200 
     future_cancel: 201
