--- a/config/application.yml
+++ b/config/application.yml
@@ -174,7 +174,7 @@ defaults: &defaults
     credit_card_blacklisted: '9508'
     credit_card_blank: '9509'
     refund_invalid: '9788'
-    could_not_event_bill: '9883'
+    no_reccurent_billing_error: '9883'
     member_club_dont_allow: '9884'
     nothing_to_change_tom: '9885'
     member_status_dont_allow: '9886'
