ref#27140-added and improved HD and SD logic

--- a/config/application.yml
+++ b/config/application.yml
@@ -81,6 +81,7 @@ defaults: &defaults
     operation_updated: 237
     note_added: 238
     remote_club_cash_transaction: 239
+    downgrade_member: 240
     #communication
     active_email: 300     
     prebill_email: 301    
