--- a/config/application.yml
+++ b/config/application.yml
@@ -195,6 +195,7 @@ defaults: &defaults
     member_email_blacklisted: '9996'
     member_could_no_be_blacklisted: '9998'
     tom_wihtout_gateway_configured: '9789'
+    tom_to_downgrade_belongs_to_different_club: '9790'
     club_cash_transaction_not_successful: '9791'
     fulfillment_error: '9801'
     fulfillment_reason_blank: '9802'
