--- a/config/application.yml
+++ b/config/application.yml
@@ -177,6 +177,7 @@ defaults: &defaults
     credit_card_blacklisted: '9508'
     credit_card_blank: '9509'
     refund_invalid: '9788'
+    membership_billing_error: '9882' 
     no_reccurent_billing_error: '9883'
     member_club_dont_allow: '9884'
     nothing_to_change_tom: '9885'
