--- a/db/decline_strategies.yml
+++ b/db/decline_strategies.yml
@@ -14825,3 +14825,34 @@
     id: 990
 
 
+- !ruby/object:DeclineStrategy
+  attributes:
+    gateway: mes
+    installment_type: 1.month
+    credit_card_type: all
+    response_code: '001'
+    limit: 4
+    days: 6
+    decline_type: soft
+    notes: related to redmine issue 27307
+    deleted_at: 
+    created_at: 2013-05-28 10:56:31.000000000 Z
+    updated_at: 2013-05-28 10:56:31.000000000 Z
+    id: 991
+
+
+- !ruby/object:DeclineStrategy
+  attributes:
+    gateway: mes
+    installment_type: 1.year
+    credit_card_type: all
+    response_code: '001'
+    limit: 4
+    days: 6
+    decline_type: soft
+    notes: related to redmine issue 27307
+    deleted_at: 
+    created_at: 2013-05-28 10:56:31.000000000 Z
+    updated_at: 2013-05-28 10:56:31.000000000 Z
+    id: 992
+
