--- a/config/application.yml
+++ b/config/application.yml
@@ -184,6 +184,7 @@ defaults: &defaults
     credit_card_blacklisted: '9508'
     credit_card_blank: '9509'
     refund_invalid: '9788'
+    manual_billing_with_low_amount: '9880'
     manual_billing_error: '9881'
     membership_billing_error: '9882' 
     no_reccurent_billing_error: '9883'
