--- a/config/application.yml
+++ b/config/application.yml
@@ -1,7 +1,8 @@
 defaults: &defaults
   exact_target:
-    username: ax
-    password: ax
+    username: martin@xagax.com
+    password: charly-martin2013
+    bussines_unit_for_test: '6177869'
   max_reactivations: 3
   days_to_wait_to_cancel_fulfillments: 2
   next_retry_on_missing_decline: 20.days
@@ -338,9 +339,6 @@ production:
     folder: <%= "#{Rails.root}/mes_account_updater_files" %>
     url: https://www.merchante-solutions.com/
   xxxyyyzzz: 7faf4f991bc44841a00423b8db9602bb
-  exact_target:
-    username: martin@xagax.com
-    password: charly-martin2013
 
 
 prototype:
