[#51154973] sync member to ET manually

--- a/config/application.yml
+++ b/config/application.yml
@@ -90,6 +90,7 @@ defaults: &defaults
     remote_club_cash_transaction: 239
     downgrade_member: 240
     unblacklisted: 241
+    member_manually_synced_to_exact_target: 242
     #communication
     active_email: 300     
     prebill_email: 301    
