--- a/db/decline_strategies.yml
+++ b/db/decline_strategies.yml
@@ -14856,3 +14856,34 @@
     updated_at: 2013-05-28 10:56:31.000000000 Z
     id: 992
 
+
+- !ruby/object:DeclineStrategy
+attributes:
+  gateway: mes
+  installment_type: 1.month
+  credit_card_type: all
+  response_code: '061'
+  limit: 4
+  days: 9
+  decline_type: soft
+  notes: 
+  deleted_at: 
+  created_at: 2013-06-25 18:59:06.000000000 Z
+  updated_at: 2013-06-25 18:59:06.000000000 Z
+  id: 993
+
+
+- !ruby/object:DeclineStrategy
+attributes:
+  gateway: mes
+  installment_type: 1.year
+  credit_card_type: all
+  response_code: '061'
+  limit: 4
+  days: 9
+  decline_type: soft
+  notes: 
+  deleted_at: 
+  created_at: 2013-06-25 19:09:22.000000000 Z
+  updated_at: 2013-06-25 19:09:22.000000000 Z
+  id: 994
