--- a/config/application.yml
+++ b/config/application.yml
@@ -158,6 +158,7 @@ defaults: &defaults
     from_bad_address_to_out_of_stock: 453
     from_bad_address_to_returned: 454
     from_bad_address_to_canceled: 455
+    automatic_recycle_credit_card: 456
     #vip
     vip_event_registration: 900
     vip_event_cancelation: 901 
