--- a/config/application.yml
+++ b/config/application.yml
@@ -164,6 +164,9 @@ defaults: &defaults
     vip_event_cancelation: 901 
     #other
     others: 1000
+    #not_visible
+    et_timeout_create: 5000
+    et_timeout_update: 5001
   error_codes:
     success: '000'
     wrong_data: '100'
