--- a/config/application.yml
+++ b/config/application.yml
@@ -169,6 +169,7 @@ defaults: &defaults
     et_timeout_update: 5001
     et_timeout_retrieve: 5002
     et_timeout_destroy: 5003
+    et_timeout_trigger_create: 5004
   error_codes:
     success: '000'
     wrong_data: '100'
