--- a/config/application.yml
+++ b/config/application.yml
@@ -47,6 +47,8 @@ defaults: &defaults
     membership_billing_without_decline_strategy_limit: 117
     membership_manual_cash_billing: 118
     membership_manual_check_billing: 119
+    membership_billing_with_error: 120
+    manual_billing_with_error: 121
     #profile
     cancel: 200 
     future_cancel: 201
