--- a/config/application.yml
+++ b/config/application.yml
@@ -92,6 +92,7 @@ defaults: &defaults
     downgrade_member: 240
     unblacklisted: 241
     member_manually_synced_to_exact_target: 242
+    save_the_sale_through_api: 243
     #communication
     active_email: 300     
     prebill_email: 301    
