--- a/db/decline_strategies.yml
+++ b/db/decline_strategies.yml
@@ -15304,3 +15304,34 @@
     updated_at: 2013-08-06 13:18:55.000000000 Z
     id: 1020
 
+
+- !ruby/object:DeclineStrategy
+  attributes:
+    gateway: mes
+    installment_type: 1.year
+    credit_card_type: all
+    response_code: 091
+    limit: 4
+    days: 6
+    decline_type: soft
+    notes: 
+    deleted_at: 
+    created_at: 2013-08-28 16:34:25.000000000 Z
+    updated_at: 2013-08-28 16:34:25.000000000 Z
+    id: 1021
+
+
+- !ruby/object:DeclineStrategy
+  attributes:
+    gateway: mes
+    installment_type: 1.month
+    credit_card_type: all
+    response_code: 091
+    limit: 4
+    days: 6
+    decline_type: soft
+    notes: 
+    deleted_at: 
+    created_at: 2013-08-28 16:34:25.000000000 Z
+    updated_at: 2013-08-28 16:34:25.000000000 Z
+    id: 1022
