--- a/db/decline_strategies.yml
+++ b/db/decline_strategies.yml
@@ -15335,3 +15335,53 @@
     created_at: 2013-08-28 16:34:25.000000000 Z
     updated_at: 2013-08-28 16:34:25.000000000 Z
     id: 1022
+
+
+- !ruby/object:DeclineStrategy
+attributes:
+  gateway: authorize_net
+  installment_type: 1.month
+  credit_card_type: master
+  response_code: '3'
+  limit: 6
+  days: 4
+  decline_type: soft
+  notes: 
+  deleted_at: 
+  created_at: 2013-08-28 20:13:35.000000000 Z
+  updated_at: 2013-08-28 20:13:35.000000000 Z
+  id: 1023
+
+
+- !ruby/object:DeclineStrategy
+attributes:
+  gateway: authorize_net
+  installment_type: 1.year
+  credit_card_type: master
+  response_code: '3'
+  limit: 6
+  days: 4
+  decline_type: soft
+  notes: 
+  deleted_at: 
+  created_at: 2013-08-28 20:13:36.000000000 Z
+  updated_at: 2013-08-28 20:13:36.000000000 Z
+  id: 1024
+
+
+- !ruby/object:DeclineStrategy
+attributes:
+  gateway: authorize_net
+  installment_type: 1000.years
+  credit_card_type: master
+  response_code: '3'
+  limit: 6
+  days: 4
+  decline_type: soft
+  notes: 
+  deleted_at: 
+  created_at: 2013-08-28 20:13:36.000000000 Z
+  updated_at: 2013-08-28 20:13:36.000000000 Z
+  id: 1025
+
+
