--- a/db/decline_strategies.yml
+++ b/db/decline_strategies.yml
@@ -15385,3 +15385,17 @@
     id: 1025
 
 
+- !ruby/object:DeclineStrategy
+  attributes:
+    gateway: mes
+    installment_type: 1.year
+    credit_card_type: all
+    response_code: '065'
+    limit: 4
+    days: 9
+    decline_type: soft
+    notes:
+    deleted_at:
+    created_at: 2013-09-20 15:30:40.000000000 Z
+    updated_at: 2013-09-20 15:30:40.000000000 Z
+    id: 1026
