--- a/config/application.yml
+++ b/config/application.yml
@@ -227,6 +227,7 @@ defaults: &defaults
     fulfillment_reason_blank: '9802'
     fulfillment_is_renwed: '9803'
     operation_not_saved: '9900'
+    payment_gateway_time_out: '9901'
   fulfillment_products:
     all: All
     kit_card: Kit - Card
