--- a/config/application.yml
+++ b/config/application.yml
@@ -94,6 +94,7 @@ defaults: &defaults
     save_the_sale_through_api: 243
     bill_overdue_cancel: 244
     remote_club_cash_transaction_failed: 245
+    tom_upgrade: 246
     #communication
     active_email: 300     
     prebill_email: 301    
