--- a/config/application.yml
+++ b/config/application.yml
@@ -199,6 +199,7 @@ defaults: &defaults
     credit_card_in_use: '9507'
     credit_card_blacklisted: '9508'
     credit_card_blank: '9509'
+    member_not_expecting_billing: '9787'
     refund_invalid: '9788'
     manual_billing_with_less_amount_than_permitted: '9880'
     manual_billing_error: '9881'
