--- a/config/application.yml
+++ b/config/application.yml
@@ -228,6 +228,7 @@ defaults: &defaults
     fulfillment_is_renwed: '9803'
     operation_not_saved: '9900'
     payment_gateway_time_out: '9901'
+    payment_gateway_error: '9900'
   fulfillment_products:
     all: All
     kit_card: Kit - Card
