--- a/config/application.yml
+++ b/config/application.yml
@@ -48,6 +48,8 @@ defaults: &defaults
     membership_manual_check_billing: 119
     membership_billing_with_error: 120
     manual_billing_with_error: 121
+    no_reccurent_billing_donation: 122
+    no_recurrent_billing_donation_with_error: 123
     #profile
     cancel: 200 
     future_cancel: 201
