--- a/config/application.yml
+++ b/config/application.yml
@@ -48,6 +48,7 @@ defaults: &defaults
     membership_manual_check_billing: 119
     membership_billing_with_error: 120
     manual_billing_with_error: 121
+    credit_error_gateway_differs_from_current: 122
     #profile
     cancel: 200 
     future_cancel: 201
@@ -202,6 +203,7 @@ defaults: &defaults
     credit_card_blank: '9509'
     member_not_expecting_billing: '9787'
     refund_invalid: '9788'
+    transaction_gateway_differs_from_current: '9786'
     manual_billing_with_less_amount_than_permitted: '9880'
     manual_billing_error: '9881'
     membership_billing_error: '9882' 
