--- a/config/sunspot.yml
+++ b/config/sunspot.yml
@@ -1,13 +1,3 @@
-production:
-  solr:
-    hostname: localhost
-    port: 8983
-    log_level: WARNING
-    path: /solr/production
-    auto_commit_after_request: false
-    # read_timeout: 2
-    # open_timeout: 0.5
-
 development:
   solr:
     hostname: localhost
@@ -16,18 +6,28 @@ development:
     path: /solr/development
     auto_commit_after_request: false
 
+production:
+  solr:
+    hostname: solr.stoneacrehq.com
+    port: 8983
+    log_level: WARNING
+    path: /solr/production
+    auto_commit_after_request: false
+    # read_timeout: 2
+    # open_timeout: 0.5
+
 prototype:
   solr:
-    hostname: localhost
-    port: 8985
+    hostname: solr.stoneacrehq.com
+    port: 8983
     log_level: DEBUG
     path: /solr/prototype
     auto_commit_after_request: false
 
 staging:
   solr:
-    hostname: localhost
-    port: 8985
+    hostname: solr.stoneacrehq.com
+    port: 8983
     log_level: DEBUG
     path: /solr/staging
     auto_commit_after_request: false
